--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 body {
     width: 100%;
     height: 100%;
+    font-family: 'Roboto', sans-serif;
     background: #f3f3f3;
 }
 
@@ -116,7 +117,7 @@ input:focus {
 }
 
 .text-message {
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
